--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   font-family: sans-serif;
   margin: 0;
-  padding: 0;
+  padding: 2rem;
   line-height: 1.6;
   color: #333;
   background-color: #f4f9f4;
