--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@ body {
 header {
   background-color: #2e7d32;
   color: white;
-  padding: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   text-align: center;
 }
 
