--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-  background-color: #2e7d32;
+  background-color: #334155;
   color: white;
   padding-left: 2rem;
   padding-right: 2rem;
@@ -43,11 +43,11 @@ header h1 {
       color: white;
     }
 h1, h2, h3 {
-      color: #2e7d32;
+      color: #334155;
     }
 
 .button {
-  background-color: #2e7d32;
+  background-color: #334155;
   color: white;
   padding: 0.75rem 1.5rem;
   text-decoration: none;
