--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body {
   font-family: sans-serif;
   margin: 0;
-  padding: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   line-height: 1.6;
   color: #333;
   background-color: #f4f9f4;
@@ -10,8 +11,7 @@ body {
 header {
   background-color: #334155;
   color: white;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding: 0;
   text-align: center;
 }
 
