--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body {
   font-family: sans-serif;
   margin: 0;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: 3rem;
+  padding-right: 3rem;
   line-height: 1.6;
   color: #333;
   background-color: #f4f9f4;
@@ -33,6 +33,7 @@ main section {
 }
 
 section {
+  margin-top: 1.5rem;
   margin-bottom: 3rem;
 }
 
