--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
   padding: 0 3rem;
   line-height: 1.8;
   color: #2e2e2e;
-  background-color: #f5f8f5; /* very light sage */
+  background-color: #6f8f6f; /* very light sage */
 }
 
 header {
