--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ footer {
 }
 
 .footer-icon.linkedin {
-  background-image: url('images/icons/linkedin.svg');
+  background-image: url('images/icons/linkedin.png');
 }
 
 header h1 {
