--- a/styles.css
+++ b/styles.css
@@ -82,7 +82,7 @@ footer {
 }
 
 .footer-icon.email {
-  background-image: url('images/email.svg');
+  background-image: url('images/email.png');
 }
 
 .footer-icon.linkedin {
