--- a/styles.css
+++ b/styles.css
@@ -104,8 +104,8 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-family: 'Barlow Condensed', sans-serif;
-  font-weight: 1000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
 
 .button {
