--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 0.5rem 1.75rem;
-  background-color: #6f8f6f;
+  background-color: #3F8285;
   color: white;
 }
 
@@ -100,11 +100,11 @@ header h1 {
 }
 
 h1, h2, h3 {
-  color: #6f8f6f;
+  color: #3F8285;
 }
 
 .button {
-  background-color: #6f8f6f;
+  background-color: #3F8285;
   color: white;
   padding: 0.75rem 1.5rem;
   text-decoration: none;
