--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ main section {
 
 section {
   margin: 1.5rem 0 3rem;
-  background-color: #e9f0e9;
+  background-color: #D2EBEC;
   padding: 1.5rem;
   border-radius: 8px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.05);
@@ -60,7 +60,7 @@ section {
 }
 
 footer {
-  background-color: #e9f0e9;
+  background-color: #D2EBEC;
   text-align: center;
   padding: 1rem;
   font-size: 0.9rem;
