--- a/styles.css
+++ b/styles.css
@@ -184,7 +184,7 @@ h1, h2, h3 { color: #3F8285; }
 .section-image { display: block; margin: 1rem auto 0; width: 100%; }
 @media (min-width: 900px) { .section-image { width: 50%; } }
 
-.testimonials-section .sidepicture-image {
+.sidepicture-image.testimonials-image {
   height: 450px;
   object-fit: cover;
   object-position: center;
